--- a/package.json
+++ b/package.json
@@ -1,26 +1,42 @@
 {
-  "name": "appengine-hello-world",
-  "description": "Simple Hello World Node.js sample for Google App Engine Standard Environment.",
-  "version": "0.0.1",
+  "name": "ca_bert",
+  "version": "0.1.0",
   "private": true,
-  "license": "Apache-2.0",
-  "author": "Google Inc.",
-  "repository": {
-      "type": "git",
-      "url": "https://github.com/scottspace/ca_bert.git"
-  },
-  "engines": {
-    "node": ">=8.0.0"
-  },
   "scripts": {
-    "start": "node app.js",
-    "test": "mocha --exit test/*.test.js"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "core-js": "^3.6.4",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
-    "mocha": "^7.0.0",
-    "supertest": "^4.0.2"
-  }
+    "@vue/cli-plugin-babel": "~4.3.0",
+    "@vue/cli-plugin-eslint": "~4.3.0",
+    "@vue/cli-service": "~4.3.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
