--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue-instagram": "^3.0.0"
   },
   "devDependencies": {
+    "@google-cloud/bigquery": "^4.7.0",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
