--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "csv-parser": "^2.3.2",
+    "get-stream": "^5.1.0",
+    "into-stream": "^5.1.1",
     "vue": "^2.6.11",
     "vue-instagram": "^3.0.0"
   },
