--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "googleapis": "^50.0.0",
     "node-sass": "^4.14.1",
+    "raw-loader": "^4.0.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
