--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "get-stream": "^5.1.0",
     "into-stream": "^5.1.1",
     "vue": "^2.6.11",
-    "vue-instagram": "^3.0.0"
+    "vue-instagram": "^3.0.0",
+    "vue-router": "^3.1.6"
   },
   "devDependencies": {
     "@google-cloud/bigquery": "^4.7.0",
@@ -28,7 +29,8 @@
     "node-sass": "^4.14.1",
     "raw-loader": "^4.0.1",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vue-virtual-scroller": "^1.0.10"
   },
   "eslintConfig": {
     "root": true,
